--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
     "bullmq": "^5.1.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
@@ -44,7 +46,12 @@
     "testEnvironment": "node",
     "collectCoverage": true,
     "coverageDirectory": "coverage",
-    "coverageReporters": ["text", "html", "json", "lcov"],
+    "coverageReporters": [
+      "text",
+      "html",
+      "json",
+      "lcov"
+    ],
     "coveragePathIgnorePatterns": [
       "node_modules",
       "tests",
@@ -62,16 +69,21 @@
     "testMatch": [
       "<rootDir>/tests/**/*.test.ts"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/tests/setup.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.ts"
+    ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     },
     "reporters": [
       "default",
-      ["jest-junit", {
-        "outputDirectory": "coverage",
-        "outputName": "junit.xml"
-      }]
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "coverage",
+          "outputName": "junit.xml"
+        }
+      ]
     ]
   }
 }
