feat(auth): implement comprehensive authentication system with JWT
- Add secure user authentication with email/password login using bcrypt
- Implement JWT token management with automatic refresh and secure storage
- Create protected routes and authentication components for frontend
- Update backend with CORS, database migration, and API versioning (/v1)
- Modify extension to use email/password authentication instead of OAuth
- Add extensive test coverage for authentication flows
- Update Docker configurations for development environment

BREAKING CHANGE: Authentication API endpoints changed from /api to /v1, and login method switched from OAuth to email/password

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,10 @@ services:
     environment:
       DATABASE_URL: postgresql://booky_user:booky_password@postgres:5432/booky
       REDIS_URL: redis://redis:6379
-      MEILI_URL: http://meilisearch:7700
+      MEILI_HOST: http://meilisearch:7700
       MEILI_MASTER_KEY: masterKey
       JWT_SECRET: your-secret-key
+      JWT_REFRESH_SECRET: your-refresh-secret-key
     depends_on:
       - postgres
       - redis
@@ -58,6 +59,7 @@ services:
       - backend
     volumes:
       - ./frontend:/app
+      - ./tests:/tests
       - /app/node_modules
 
 volumes:
