--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "watch": "nodemon --exec ts-node src/server.ts",
     "worker": "ts-node src/worker.ts",
     "seed": "ts-node src/seed.ts",
+    "migrate": "ts-node src/migrate.ts",
     "test": "jest"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "bcrypt": "^6.0.0",
     "bullmq": "^5.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.0",
     "jsonwebtoken": "^9.0.0",
@@ -26,6 +28,7 @@
     "redis": "^4.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.5",
