--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest",
-    "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration",
+    "test": "vitest",
+    "test:unit": "vitest run tests/unit",
+    "test:integration": "vitest run tests/integration",
+    "test:ui": "vitest --ui",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "cypress:run:chrome": "cypress run --browser chrome",
@@ -16,33 +17,39 @@
     "cypress:run:edge": "cypress run --browser edge"
   },
   "dependencies": {
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.6.0",
+    "dompurify": "^3.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.63.0",
     "react-router-dom": "^6.20.0",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.12.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@cypress/code-coverage": "^3.12.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.0",
     "cypress": "^15.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "jest-util": "^29.7.0",
     "jsdom": "^22.1.0",
+    "msw": "^2.11.3",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.0",
     "vite-plugin-istanbul": "^5.0.0",
-    "jest-util": "^29.7.0"
+    "vitest": "^3.2.4"
   },
   "jest": {
     "preset": "ts-jest",
